// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components | app-header | index snapshot doit correspondre quand l'user est connecté 1`] = `
<WithStyles(AppBar)
  position="static"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "HeaderContainer-toolbarRoot-4",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "HeaderContainer-titleRoot-3",
        }
      }
      component="div"
    >
      <span>
        <span
          className="HeaderContainer-lighterTitle-2"
        >
          LEXIMPACT 
        </span>
        <span
          className="HeaderContainer-bolderTitle-1"
        >
          POP
        </span>
      </span>
    </WithStyles(Typography)>
    <div />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user n'est pas connecté 1`] = `
<WithStyles(AppBar)
  position="static"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "HeaderContainer-toolbarRoot-4",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "HeaderContainer-titleRoot-3",
        }
      }
      component="div"
    >
      <span>
        <span
          className="HeaderContainer-bolderTitle-1"
        >
          OPEN 
        </span>
        <span
          className="HeaderContainer-lighterTitle-2"
        >
          LEXIMPACT
        </span>
      </span>
    </WithStyles(Typography)>
    <div />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;
